# qppcad

./: .gitmodules  CMakeLists.txt  resources.rc
cmakes/: cpack_config.cmake
packaging/appimage/: AppRun.in  make_appimage.sh  qppcad.desktop
packaging/windows/: extra_install copy.nsi  extra_install.nsi
src/launcher/: CMakeLists.txt  laucher_main.cpp
src/qppcad/core/: history_stream.hpp  main.cpp  platform.cpp  workspace.cpp
src/qppcad/python/: python_simple_query.cpp
src/qppcad/ui/: add_new_ws_item_widget.cpp  qbinded_inputs.cpp
src/qppcad/ws_item/geom_view/: geom_view.cpp
